--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
   #     - name: "Run Tests"
   #       run: "poetry run invoke unittest"
   sync_jobs_repo:
-    needs: "unittest"
+    # needs: "unittest"
     runs-on: "ubuntu-20.04"
     env:
       INVOKE_NAUTOBOT_DOCKER_COMPOSE_LOCAL: "True"
